policies/components/security-context/require-drop-all-capabilities/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-drop-all-capabilities
policies:
  - require-drop-all-capabilities.yaml
resources:
  - resources.yaml
variables: ../../values.yaml
results:
  - kind: Pod
    policy: ibm-require-drop-all-capabilities
    resources:
      - add-capabilities-bad
    result: fail
    rule: require-drop-all
  - kind: Pod
    policy: ibm-require-drop-all-capabilities
    resources:
      - add-capabilities
    result: pass
    rule: require-drop-all
